--- a/OnlineShop/src/templates/gallery.html
+++ b/OnlineShop/src/templates/gallery.html
@@ -6,12 +6,12 @@
             <div class="furniture-gallery col-sm-11 col-md-10 col-lg-6">
 
                 <div class="addList icons d-flex flex-column">
-                    <a href="#" data-toggle="tooltip" data-placement="right" title="Add to wishlist"><i
+                    <a href="#" data-view="tooltip" data-placement="right" title="Add to wishlist"><i
                             class="far fa-heart border border-dark p-2 mb-1 ml-2"></i></a>
-                    <a href="#"  id="galleryQV" data-toggle="modal" data-target="#productModal"  data-placement="right"
+                    <a href="#"  id="galleryQV" data-view="tooltip" data-toggle="modal" data-target="#productModal"  data-placement="right"
                        title="Quick view"><i
                             class="fas fa-eye border border-dark p-2 mb-1 ml-2"></i></a>
-                    <a href="#" data-toggle="tooltip" data-placement="right" title="Add to cart"><i
+                    <a href="#" data-view="tooltip" data-placement="right" title="Add to cart"><i
                             class="fas fa-shopping-basket border border-dark p-2 mb-1 ml-2"></i></a>
                 </div>
 
@@ -38,7 +38,7 @@
 
 
                     <h2>furniture gallery</h2>                
-                <div class="qqq w-100">
+                <div class="w-100">
                   <div class="container">
                      <div class="row"> 
                     <ul class="nav nav-tabs" id="myTab" role="tablist">                                               
@@ -46,16 +46,16 @@
                             <a class="nav-link active" id="featured-tab" data-toggle="tab" href="#featured" role="tab"
                                 aria-controls="featured" aria-selected="true">Featured</a>
                         </li>
-                        <li class="nav-item col-3">
-                            <a class="nav-link" id="top-seller-tab" data-toggle="tab" href="#top-seller" role="tab"
+                        <li class="nav-item next col-3">
+                            <a class="nav-link" id="top-seller-tab" data-toggle="tab" href="#featured" role="tab"
                                 aria-controls="top-seller" aria-selected="false">TOP SELLER</a>
                         </li>
                         <li class="nav-item col-3">
-                            <a class="nav-link" id="sale-off-tab" data-toggle="tab" href="#sale-off" role="tab"
+                            <a class="nav-link" id="sale-off-tab" data-toggle="tab" href="#featured" role="tab"
                                 aria-controls="sale-off" aria-selected="false">SALE OFF</a>
                         </li>
                         <li class="nav-item col-3">
-                            <a class="nav-link" id="top-rated-tab" data-toggle="tab" href="#top-rated" role="tab"
+                            <a class="nav-link" id="top-rated-tab" data-toggle="tab" href="#featured" role="tab"
                                 aria-controls="top-rated" aria-selected="false">TOP RATED</a>
                         </li>
                     </ul>
@@ -100,7 +100,7 @@
                                         alt="gallery-image">
                                     <img class="img-slider col-2" data-set="5" src="./src/images/gallery/14.png"
                                         alt="gallery-image">
-                                    <button class="btn-right"> <i class="fas fa-chevron-right arrow"></i>
+                                    <button class="btn-right next"> <i class="fas fa-chevron-right arrow"></i>
                                     </button>
                                 </div>
                               </div> 
@@ -108,116 +108,15 @@
                             </div>
 
                         </div>
+                        
 
-                        <div class="tab-pane fade" id="top-seller" role="tabpanel" aria-labelledby="top-seller-tab">
-                            <div class="review-container" data-set="1">
-                                <img class="avatar" src="./src/images/gallery/10.png" alt="gallery-image">
-                            </div>
-                            <div class="review-container active" data-set="2">
-
-                                <img class="avatar" src="./src/images/gallery/11.png" alt="gallery-image">
-                            </div>
-                            <div class="review-container" data-set="3">
-                            </div>
-                            <div class="review-container" data-set="4">
-                                <img class="avatar" src="./src/images/gallery/13.png" alt="gallery-image">
-                            </div>
-                            <div class="review-container" data-set="5">
-                                <img class="avatar" src="./src/images/gallery/14.png" alt="gallery-image">
-                            </div>
-                            <div class="bottom-slider">
-                                <div class="wrapper-slider d-flex">
-                                    <button class="btn-left"> <i class="fas fa-chevron-left arrow"></i> </button>
-                                    <img class="img-slider" data-set="1" src="./src/images/gallery/10.png"
-                                        alt="gallery-image">
-                                    <img class="img-slider zoom" data-set="2" src="./src/images/gallery/11.png"
-                                        alt="gallery-image">
-                                    <img class="img-slider" data-set="3" src="./src/images/gallery/12.png"
-                                        alt="gallery-image">
-                                    <img class="img-slider" data-set="4" src="./src/images/gallery/13.png"
-                                        alt="gallery-image">
-                                    <img class="img-slider" data-set="5" src="./src/images/gallery/14.png"
-                                        alt="gallery-image">
-                                    <button class="btn-right"> <i class="fas fa-chevron-right arrow"></i> </button>
-                                </div>
-                            </div>
-
-
-
-                        </div>
-                        <div class="tab-pane fade" id="sale-off" role="tabpanel" aria-labelledby="sale-off-tab">
-                            <div class="review-container" data-set="1">
-                                <img class="avatar" src="./src/images/gallery/10.png" alt="gallery-image">
-                            </div>
-                            <div class="review-container" data-set="2">
-                                <img class="avatar" src="./src/images/gallery/11.png" alt="gallery-image">
-                            </div>
-                            <div class="review-container" data-set="3">
-                                <img class="avatar" src="./src/images/gallery/12.png" alt="gallery-image">
-                            </div>
-                            <div class="review-container active" data-set="4">
-                                <img class="avatar" src="./src/images/gallery/13.png" alt="gallery-image">
-                            </div>
-                            <div class="review-container" data-set="5">
-                                <img class="avatar" src="./src/images/gallery/14.png" alt="gallery-image">
-                            </div>
-
-                            <div class="bottom-slider">
-                                <div class="wrapper-slider d-flex">
-                                    <button class="btn-left"> <i class="fas fa-chevron-left arrow"></i> </button>
-                                    <img class="img-slider" data-set="1" src="./src/images/gallery/10.png"
-                                        alt="gallery-image">
-                                    <img class="img-slider" data-set="2" src="./src/images/gallery/11.png"
-                                        alt="gallery-image">
-                                    <img class="img-slider" data-set="3" src="./src/images/gallery/12.png"
-                                        alt="gallery-image">
-                                    <img class="img-slider zoom" data-set="4" src="./src/images/gallery/13.png"
-                                        alt="gallery-image">
-                                    <img class="img-slider" data-set="5" src="./src/images/gallery/14.png"
-                                        alt="gallery-image">
-                                    <button class="btn-right"> <i class="fas fa-chevron-right arrow"></i> </button>
-                                </div>
-                            </div>
-
-                        </div>
-                        <div class="tab-pane fade" id="top-rated" role="tabpanel" aria-labelledby="top-rated-tab">
-                            <div class="review-container" data-set="1">
-                                <img class="avatar" src="./src/images/gallery/10.png" alt="gallery-image">
-                            </div>
-                            <div class="review-container" data-set="2">
-                                <img class="avatar" src="./src/images/gallery/11.png" alt="gallery-image">
-                            </div>
-                            <div class="review-container" data-set="3">
-                                <img class="avatar" src="./src/images/gallery/12.png" alt="gallery-image">
-                            </div>
-                            <div class="review-container" data-set="4">
-                                <img class="avatar" src="./src/images/gallery/13.png" alt="gallery-image">
-                            </div>
-                            <div class="review-container active" data-set="5">
-                                <img class="avatar" src="./src/images/gallery/14.png" alt="gallery-image">
-                            </div>
-                            <div class="bottom-slider">
-                                <div class="wrapper-slider d-flex">
-                                    <button class="btn-left"> <i class="fas fa-chevron-left arrow"></i> </button>
-                                    <img class="img-slider" data-set="1" src="./src/images/gallery/10.png"
-                                        alt="gallery-image">
-                                    <img class="img-slider" data-set="2" src="./src/images/gallery/11.png"
-                                        alt="gallery-image">
-                                    <img class="img-slider" data-set="3" src="./src/images/gallery/12.png"
-                                        alt="gallery-image">
-                                    <img class="img-slider" data-set="4" src="./src/images/gallery/13.png"
-                                        alt="gallery-image">
-                                    <img class="img-slider zoom" data-set="5" src="./src/images/gallery/14.png"
-                                        alt="gallery-image">
-                                    <button class="btn-right"> <i class="fas fa-chevron-right arrow"></i> </button>
-                                </div>
-                            </div>
-
-                        </div>
+                       
+                             
                     </div>
 
 
                 </div>
+                
             </div> 
 
               <div class="row">
