--- a/OnlineShop/src/templates/header.html
+++ b/OnlineShop/src/templates/header.html
@@ -1,6 +1,22 @@
 <!-- Section HEADER -->
 <header class="header">
-    <!-- <div class="overlay"></div> -->
+        <div class="modal-wrapper">
+                <div class="modal fade modal " id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog " role="document">
+                        <div class="modal-content modal-wrapper-empty">
+            
+                            <div class="modal-body modal-body-class-empty">
+                                <p class="modal-window-cross text-center align-middle" data-dismiss="modal" aria-hidden="true"
+                                   aria-label="Close">x</p>
+                                <p class="modal-window-header text-center mb-0">Your cart is empty</p>
+                                <p class="modal-window-text text-center mb-0">But it's never too late to fix it :)
+                                </p>
+                            </div>
+            
+                        </div>
+                    </div>
+                </div>
+            </div>
     <div class="container">
         <div class="row d-flex align-items-center">
             <div class="phone col-4 d-flex align-items-center"><a><img class="d-none d-md-block mr-2  icon-tel" src="./src/images/logos/tel_icon.png"><span>2300 - 3560 - 222</span></a></div>
