--- a/OnlineShop/src/templates/header.html
+++ b/OnlineShop/src/templates/header.html
@@ -1,14 +1,14 @@
-<!-- Section HEADER -->
+ <!-- Section HEADER  -->
 <header class="header">
+ <!-- модальное окно пустая корзина -->
         <div class="modal-wrapper">
-                <div class="modal fade modal " id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog " role="document">
-                        <div class="modal-content modal-wrapper-empty">
+                <div class="modal fade modal" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content  modal-wrapper-empty">
             
-                            <div class="modal-body modal-body-class-empty">
-                                <p class="modal-window-cross text-center align-middle" data-dismiss="modal" aria-hidden="true"
-                                   aria-label="Close">x</p>
-                                <p class="modal-window-header text-center mb-0">Your cart is empty</p>
+                            <div class="modal-body  modal-body-class-empty">
+                                    <button class="close p-3 text-white" data-dismiss="modal">×</button>
+                                <p class="modal-window-header text-center mb-2">Your cart is empty</p>
                                 <p class="modal-window-text text-center mb-0">But it's never too late to fix it :)
                                 </p>
                             </div>
@@ -17,6 +17,9 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Модальное окно с товаром -->
+
     <div class="container">
         <div class="row d-flex align-items-center">
             <div class="phone col-4 d-flex align-items-center"><a><img class="d-none d-md-block mr-2  icon-tel" src="./src/images/logos/tel_icon.png"><span>2300 - 3560 - 222</span></a></div>
