--- a/OnlineShop/src/scss/sections/_footer.scss
+++ b/OnlineShop/src/scss/sections/_footer.scss
@@ -16,7 +16,9 @@
     display: block;
     margin-bottom: 0.8rem;
     & a{
+      display: inline;
       text-decoration: none;
+      list-style: none;
       font-size: 0.875rem;
       font-family: $font-family;
       color: rgba(169, 169, 169, 255);
