--- a/OnlineShop/src/scss/sections/_top-menu.scss
+++ b/OnlineShop/src/scss/sections/_top-menu.scss
@@ -1,47 +1,48 @@
+// Section TOP-MENU
 .top-menu{
-    height:85px;
-    box-shadow: 0px 5px 5px lightgrey;
- .navbar{
-     padding:0;
-     height:100%;
- }
-  
- .input-group-append{
+  height:85px;
+  box-shadow: 0px 5px 5px lightgrey;
+  .navbar{
+    padding:0;
+    height:100%;
+  }
+
+  .input-group-append{
     position: relative;
     right: 50px;
 
- }   
-.fa-search:before{
+  }
+  .fa-search:before{
     position: relative;
     left: 25px;
     bottom:23px;
-}
+  }
 
-.form-control{ 
-border:1px solid black;
-border-radius: 0px;
-// width: 227px;
-// height: 47px;   
-}
-.nav-search {    
+  .form-control{
+    border:1px solid black;
+    border-radius: 0px;
+    // width: 227px;
+    // height: 47px;
+  }
+  .nav-search {
     display: flex;
-    width: auto; 
-    
-    line-height:85px;
-}
+    width: auto;
 
-.navbar-toggler {
+    line-height:85px;
+  }
+
+  .navbar-toggler {
     border: none;
     width: 29px;
     height: 24px;
     position: relative;
-    z-index: 10;    
+    z-index: 10;
     transform: rotate(0deg);
     // transition: .5s ease-in-out;
     cursor: pointer;
-}
+  }
 
-.navbar-toggler span {
+  .navbar-toggler span {
     display: block;
     position: absolute;
     height: 3px;
@@ -53,101 +54,102 @@ border-radius: 0px;
     transform: rotate(0deg);
     transition: .25s ease-in-out;
     z-index: 11;
-}
+  }
 
-.navbar-toggler span:nth-child(1) {
-    top: 7px;  
-}
+  .navbar-toggler span:nth-child(1) {
+    top: 7px;
+  }
 
-.navbar-toggler span:nth-child(2) {
+  .navbar-toggler span:nth-child(2) {
     top: 13px;
-}
+  }
 
-.navbar-toggler span:nth-child(3) {
-    top: 19px;   
-}
+  .navbar-toggler span:nth-child(3) {
+    top: 19px;
+  }
 
-.navbar-toggler.open span:nth-child(1) {
+  .navbar-toggler.open span:nth-child(1) {
 
     top: 8px;
     transform: rotate(135deg);
     background: white;
-}
+  }
 
-.navbar-toggler.open span:nth-child(2) {
+  .navbar-toggler.open span:nth-child(2) {
     opacity: 0;
     left: -30px;
-}
+  }
 
-.navbar-toggler.open span:nth-child(3) {
+  .navbar-toggler.open span:nth-child(3) {
     /*position:absolute;*/
     /*z-index: 5000;*/
 
     top: 8px;
     transform: rotate(-135deg);
     background: white;
-}
-.navbar-collapse{
+  }
+  .navbar-collapse{
     position: relative;
     bottom: 2px;
     display: flex;
     justify-content: flex-end;
- }
- 
- .wide ul{
-   margin-bottom: 25px;  
-   
-    a{  
-        line-height: 85px;
-        padding: 0;
-        color: black !important;
-        border-top: 3px solid transparent;
-        // opacity: 1 !important;
-        &:hover, &:focus{
-            background-color: #d58e32;
-            border-top: 3px solid black;  
-        }
   }
- }
 
+  .wide ul{
+    margin-bottom: 25px;
 
- 
- .active ul {
-     position: relative;
-     top: -108px;
-     background-color:#363636;
-     width: 154px;
-     height: 405px;
-     align-items: flex-end;
-     z-index: 7;  
- 
-     li{
-        padding-top: 12px;
-        padding-left: 40px;
-        margin-right: 11px;
-        border-bottom: 1px solid transparent; 
-        display: block !important;
-      &:first-child{
-            padding-top: 86px;
+    a{
+      line-height: 85px;
+      padding: 0;
+      color: black !important;
+      border-top: 3px solid transparent;
+      // opacity: 1 !important;
+      &:hover, &:focus{
+        background-color: #d58e32;
+        border-top: 3px solid black;
       }
-        &:hover{    
-         border-bottom: 1px solid white;          
-        }
-        &:hover a{
-            font-weight: 500 !important;
-        }
-        
-        a{
-            color:white !important;
-            font-weight: 200 !important;
-            
-        }
-     }
     }
+  }
+
+
+
+  .active ul {
+    position: relative;
+    top: -108px;
+    background-color:#363636;
+    width: 154px;
+    height: 405px;
+    align-items: flex-end;
+    z-index: 7;
+
+    li{
+      padding-top: 12px;
+      padding-left: 40px;
+      margin-right: 11px;
+      border-bottom: 1px solid transparent;
+      display: block !important;
+      &:first-child{
+        padding-top: 86px;
+      }
+      &:hover{
+        border-bottom: 1px solid white;
+      }
+      &:hover a{
+        font-weight: 500 !important;
+      }
+
+      a{
+        color:white !important;
+        font-weight: 200 !important;
+
+      }
+    }
+  }
 }
 
 @media screen and (min-width: 220px)  and (max-width: 1199px) {
-    .navbar-collapse ul li{
-       display: none !important;
-    }
+  .navbar-collapse ul li{
+    display: none !important;
+  }
 }
+
