--- a/OnlineShop/src/scss/sections/_top-slider.scss
+++ b/OnlineShop/src/scss/sections/_top-slider.scss
@@ -1,3 +1,4 @@
+// Section TOP-SLIDER
 .carousel-icon:hover {
     background-color: #d58e32;
 }
@@ -10,8 +11,8 @@
     width: 50%;
     height: 100%;
     padding-left: 5%;
-    background-color: black; 
-    opacity: 1;  
+    background-color: black;
+    opacity: 1;
 }
 .carousel-icon-2 {
     left: 50%;
