--- a/OnlineShop/src/templates/blog.html
+++ b/OnlineShop/src/templates/blog.html
@@ -15,7 +15,7 @@
 									<div><i class="fas fa-comments"></i> 4 Comments</div>
 								</div>
 							</div>
-							<div class="card-body text-center">
+							<div class="card-body d-flex flex-column align-items-center">
 								<h4 class="card-title">Products That Fight Static </h4>
 								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
 									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
@@ -31,7 +31,7 @@
 									<div><i class="fas fa-comments"></i> 4 Comments</div>
 								</div>
 							</div>
-							<div class="card-body text-center">
+							<div class="card-body d-flex flex-column align-items-center">
 								<h4 class="card-title">Products That Fight Static </h4>
 								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
 									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
@@ -47,7 +47,7 @@
 									<div><i class="fas fa-comments"></i> 4 Comments</div>
 								</div>
 							</div>
-							<div class="card-body text-center">
+							<div class="card-body d-flex flex-column align-items-center">
 								<h4 class="card-title">Products That Fight Static </h4>
 								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
 									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
@@ -63,7 +63,7 @@
 									<div><i class="fas fa-comments"></i> 4 Comments</div>
 								</div>
 							</div>
-							<div class="card-body text-center">
+							<div class="card-body d-flex flex-column align-items-center">
 								<h4 class="card-title">Products That Fight Static </h4>
 								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
 									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
@@ -79,7 +79,7 @@
 									<div><i class="fas fa-comments"></i> 4 Comments</div>
 								</div>
 							</div>
-							<div class="card-body text-center">
+							<div class="card-body d-flex flex-column align-items-center">
 								<h4 class="card-title">Products That Fight Static </h4>
 								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
 									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
@@ -95,7 +95,7 @@
 									<div><i class="fas fa-comments"></i> 4 Comments</div>
 								</div>
 							</div>
-							<div class="card-body text-center">
+							<div class="card-body d-flex flex-column align-items-center">
 								<h4 class="card-title">Products That Fight Static </h4>
 								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
 									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
@@ -111,7 +111,7 @@
 									<div><i class="fas fa-comments"></i> 4 Comments</div>
 								</div>
 							</div>
-							<div class="card-body text-center">
+							<div class="card-body d-flex flex-column align-items-center">
 								<h4 class="card-title">Products That Fight Static </h4>
 								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
 									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
@@ -127,7 +127,7 @@
 									<div><i class="fas fa-comments"></i> 4 Comments</div>
 								</div>
 							</div>
-							<div class="card-body text-center">
+							<div class="card-body d-flex flex-column align-items-center">
 								<h4 class="card-title">Products That Fight Static </h4>
 								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
 									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
@@ -143,7 +143,7 @@
 									<div><i class="fas fa-comments"></i> 4 Comments</div>
 								</div>
 							</div>
-							<div class="card-body text-center">
+							<div class="card-body d-flex justify-content-center">
 								<h4 class="card-title">Products That Fight Static </h4>
 								<p class="card-text text-center">Aliquam dictum pellentesque nibh sit amet dapibus. Vivamus eget luctus nisi.
 									Nullam euismod leo vehicula, rutrum magna in, ornare enim vehicula, rutrum magna in, ornare enim.</p>
