--- a/OnlineShop/src/templates/header.html
+++ b/OnlineShop/src/templates/header.html
@@ -1,11 +1,31 @@
+<!-- Section HEADER  -->
 <header class="header">
-    <!-- <div class="overlay"></div> -->
+    <!-- модальное окно пустая корзина -->
+    <div class="modal-wrapper">
+        <div class="modal fade modal" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content  modal-wrapper-empty">
+
+                    <div class="modal-body  modal-body-class-empty">
+                        <button class="close p-3 text-white" data-dismiss="modal">×</button>
+                        <p class="modal-window-header text-center mb-2">Your cart is empty</p>
+                        <p class="modal-window-text text-center mb-0">But it's never too late to fix it :)
+                        </p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Модальное окно с товаром -->
+
     <div class="container">
         <div class="row d-flex align-items-center">
             <div class="phone col-4 d-flex align-items-center"><a><img class="d-none d-md-block mr-2  icon-tel" src="./src/images/logos/tel_icon.png"><span>2300 - 3560 - 222</span></a></div>
             <a class="col-4 d-flex justify-content-center"><img src="./src/images/logos/logo.png" alt="logo image"></a>
             <div class="cart col-4 d-flex justify-content-end">
-            <a href="#" class="cart d-flex align-items-center justify-content-end" data-toggle="modal" data-target="#exampleModal">
+                <a href="#" class="cart d-flex align-items-center justify-content-end" data-toggle="modal" data-target="#exampleModal">
                     <img class="rounded" src="./src/images/logos/card_icon.png">
                     <div id="cardCountItem" class="my-card-items-count rounded-circle bg-dark text-white">1</div>
                 </a>
