--- a/OnlineShop/src/templates/top-menu.html
+++ b/OnlineShop/src/templates/top-menu.html
@@ -1,7 +1,8 @@
+<!-- Section TOP-MENU -->
 <section class="top-menu">
     <div class="container">
-       
-          <nav class="navbar navbar-expand-xl navbar-light align-items-center align-content-center">
+
+        <nav class="navbar navbar-expand-xl navbar-light align-items-center align-content-center">
             <form class="col-6 col-md-3 col-lg-4 d-flex p-0 mt-4 nav-search" action="/action_page.php">
                 <input class="form-control" type="text" placeholder="Search products">
                 <div class="input-group-append">
@@ -21,7 +22,7 @@
 
             <!-- Navbar links -->
             <div class="collapse navbar-collapse wide justify-self-end" id="collapsibleNavbar">
-               
+
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link click" href="#home">HOME</a>
@@ -42,12 +43,12 @@
                         <a class="nav-link click" href="#gallery">GALLERY</a>
                     </li>
                     <li class="nav-item">
-                            <a class="nav-link click" href="#blog">BLOG</a>
+                        <a class="nav-link click" href="#blog">BLOG</a>
                     </li>
                 </ul>
-            
+
             </div>
         </nav>
-      </div>
-   
+    </div>
+
 </section>
