--- a/OnlineShop/src/templates/top-slider.html
+++ b/OnlineShop/src/templates/top-slider.html
@@ -1,39 +1,40 @@
+<!-- Section TOP-SLIDER -->
 <section class="top-slider">
     <div class="container">
-            <div id="slider"><a name="top" href="#"></a></div>
+        <div id="slider"><a name="top" href="#"></a></div>
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">                
-                    <div class="carousel-shop-window text-white  text-uppercase text-center d-flex align-items-center justify-content-center">
-                        <div>
-                            <p class="carousel-shop-window-title">indoor <span class="font-weight-bold">furniture</span>
-                            </p>
-                            <p class="carousel-shop-window-text">save up to 50% of all furniture</p>
-                            <button class="carousel-shop-window-btn text-uppercase font-weight-bold">shop now</button>
-                        </div>
+            <div class="carousel-inner">
+                <div class="carousel-shop-window text-white  text-uppercase text-center d-flex align-items-center justify-content-center">
+                    <div>
+                        <p class="carousel-shop-window-title">indoor <span class="font-weight-bold">furniture</span>
+                        </p>
+                        <p class="carousel-shop-window-text">save up to 50% of all furniture</p>
+                        <button class="carousel-shop-window-btn text-uppercase font-weight-bold">shop now</button>
                     </div>
+                </div>
 
-                   
-                <div class="carousel-item active">                   
-                    
+
+                <div class="carousel-item active">
+
                     <img src="./src/images/top-slider/1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
                     <img src="./src/images/top-slider/2.jpg" class="d-block w-100" alt="...">
-                </div>                
+                </div>
             </div>
             <div class="controls">
 
 
-        
-            <a class="carousel-control-prev carousel-icon " href="#carouselExampleControls" role="button" data-slide="prev">
-             <span class="carousel-control-prev-icon " aria-hidden="true"></span>
-             <span class="sr-only">Previous</span>
-            </a>
-           <a class="carousel-control-next carousel-icon carousel-icon-2" href="#carouselExampleControls" role="button" data-slide="next">
-             <span class="carousel-control-next-icon " aria-hidden="true"></span>
-             <span class="sr-only">Next</span>
-            </a>
-        </div>
+
+                <a class="carousel-control-prev carousel-icon " href="#carouselExampleControls" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon " aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next carousel-icon carousel-icon-2" href="#carouselExampleControls" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon " aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
     </div>
 </section>
