--- a/OnlineShop/src/templates/navbar.html
+++ b/OnlineShop/src/templates/navbar.html
@@ -1,7 +1,15 @@
 <!-- Section NAVBAR -->
 
 
-<section class="navbar-top">
+<section class="navbar-top"> 
+    <div id="to-top">
+       <span></span>
+       <span></span>
+       <span></span>
+       <span></span>
+       <span></span>
+    </div>
+    <div id="home"><a name="top" href="#"></a></div>
     <div class="container">
         <nav class="navbar navbar-expand navbar-dark bg-dark">
             <ul class="navbar-nav mr-auto">
