--- a/OnlineShop/src/templates/gallery.html
+++ b/OnlineShop/src/templates/gallery.html
@@ -124,9 +124,9 @@
                       <div class="gallery-right  d-none d-lg-block  border h-100">
                         <div class=" flex-column px-5">
                             <div class="py-5">
-                                <span class="from py-2">FROM<span class="fromPrice">$50.80</span></span>
-                                <div class="badroom py-2">Badroom Bed</div>
-                                <button type="button" class="btn button-shop py-2">shop now</button>
+                                <span class="from py-2">FROM</span><span class="fromPrice">$50.80</span>
+                                <div class="bedroom py-2">Bedroom Bed</div>
+                                <button class="btn button-shop py-2">shop now</button>
                             </div>
                             <img src="./src/images/product/bed.png" alt="" class="py-2 w-100">
                         </div>
@@ -136,5 +136,5 @@
                   </div> 
             
         </div>
-
+</div>
 </section>
